Leaderboard now returns match wins, not game wins. Fixed bug where pending matches don't show avatar. Inbox tab now shows number of messages in inbox. Added link to download android APK in footer. Added session timeout to be more than a day. Profile photo no longer stretched, it uses 180x180 image.

--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -120,9 +120,18 @@ table .label {
     background: #F7464A;
 }
 
+.badge-location {
+    position: relative;
+    top: -10px;
+}
 
 td .img-circle {
     height: 48px;
     width: 48px;
 }
 
+.bottom-right{
+    position: absolute;
+    bottom: 0;
+    left: 10px;
+}
